feat(Apps): improved launchpad visibility control
